<resources>
    <string name="app_name">Laundry</string>
    <string name="card_data_pelanggan">ID Pelanggan</string>
    <string name="card_data_nama">Nama :</string>
    <string name="alamat">Alamat :</string>
    <string name="nohp">No HP :</string>
    <string name="terdaftar">Terdaftar :</string>
    <string name="hubungi">Hubungi</string>
    <string name="lihat">Lihat</string>
    <string name="tambahkanpelanggan">Tambah Pelanggan</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="estimasi">Estimasi Hari Ini</string>
    <string name="transaksi">Transaksi</string>
    <string name="pegawai">Pegawai</string>
    <string name="tambahpegawai">Tambah Pegawai</string>
    <string name="validasi_nama_pelanggan">validasi_nama_pelanggan</string>
    <string name="validasi_alamat_pelanggan">validasi_alamat_pelanggan</string>
    <string name="validasi_nohp_pelanggan">validasi_nohp_pelanggan</string>
    <string name="cabang">cabang</string>
    <string name="validasi_cabang_pelanggan">validasi_cabang_pelanggan</string>
    <string name="editpegawai">Edit Pegawai</string>
    <string name="button_simpan">Simpan</string>
    <string name="simpan">Simpan</string>
    <string name="sunting">Sunting</string>
    <string name="perbarui">Perbarui</string>
    <string name="namapegawai">Nama Pegawai</string>
    <string name="validasi_namapegawai">validasi_namapegawai</string>
    <string name="validasi_nama_pegawai">validasi_nama_pegawai</string>
    <string name="validasi_alamat_pegawai">Validasi alamat pegawai</string>
    <string name="validasi_nohp_pegawai">Validasi nohp pegawai</string>
    <string name="validasi_cabang_pegawai">Validasi cabang pegawai</string>
    <string name="edit_pegawai_sukses">Edit pegawai sukses</string>
    <string name="edit_pegawai_gagal">Edit pegawai gagal</string>
    <string name="tambah_pelanggan_sukses">Tambah pelanggan sukses</string>
    <string name="tambah_pelanggan_gagal">Tambah pelanggan gagal</string>
    <string name="tambah_pegawai_sukses">Tambah pegawai sukses</string>
    <string name="tambah_pegawai_gagal">Tambah pegawai gagal</string>
    <string name="activity_data_pegawai">activity_data_pegawai</string>
    <string name="tambahlayanan">Tambah Layanan</string>
    <string name="editlayanan">Edit Layanan</string>
    <string name="tambah_layanan_sukses">Tambah layanan sukses</string>
    <string name="tambah_layanan_gagal">Tambah layanan gagal</string>
    <string name="edit_layanan_sukses">Edit layanan sukses</string>
    <string name="edit_layanan_gagal">Edit layanan gagal</string>
    <string name="validasi_nama_layanan">validasi_nama_layanan</string>
    <string name="validasi_harga_layanan">validasi_harga_layanan</string>
    <string name="validasi_cabang_layanan">validasi_cabang_layanan</string>
    <string name="tambah_pelanggan">Tambah Pelanggan</string>
    <string name="edit_pelanggan">Edit Pelanggan</string>
    <string name="edit_pelanggan_sukses">Edit Pelanggan Sukses</string>
    <string name="edit_pelanggan_gagal">Edit Pelanggan Gagal</string>
    <string name="ID_Tambahan">ID Tambahan</string>
    <string name="namatambahan">Nama Tambahan</string>
    <string name="harga">Harga</string>
    <string name="card_cabang">Cabang</string>
    <string name="tambahtambahan">Tambahan</string>
    <string name="namaCabang">Nama Cabang</string>
    <string name="validasi_nama_tambahan">validasi_nama_tambahan</string>
    <string name="validasi_alamat_tambahan">validasi_alamat_tambahan</string>
    <string name="validasi_cabang_tambahan">validasi_cabang_tambahan</string>
    <string name="tambah_tambahan_sukses">tambah_tambahan_sukses</string>
    <string name="tambah_tambahan_gagal">tambah_tambahan_gagal</string>
    <string name="KonfirmasiDataTransaksi">Konfirmasi Data Transaksi</string>
    <string name="DataPelanggan">Data Pelanggan</string>
    <string name="nama">Nama</string>
    <string name="etcard_nohp">No Hp</string>
    <string name="batal">Batal</string>
    <string name="layananutama">Layanan utama</string>
    <string name="namalayanan">Nama Layanan</string>
    <string name="layanantambahan">Layanan Tambahan</string>
    <string name="totalbayar">Total Bayar</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="SkenaLaundry">Skena Laundry</string>
    <string name="KirimWhatsApp">Kirim WhatsApp</string>
    <string name="ID_Cabang">ID Cabang</string>
    <string name="namacabang">Nama Cabang</string>
    <string name="bayarnanti">Bayar Nanti</string>
    <string name="Tunai">Tunai</string>
    <string name="PilihMetodePembayaran">Pilih Metode Pembayaran</string>
    <string name="card_alamat">Card Alamat</string>
    <string name="card_nohp">Card Nohp</string>
    <string name="ettambahanharga">Tambahan Harga</string>
    <string name="etnamatambahan">Nama Tambahan</string>
    <string name="etharga">Harga</string>
    <string name="StatusberhasildiubahmenjadiSudahDibayar">Status berhasil diubah menjadi sudah dibayar</string>
    <string name="Laporanberhasildihapus">Laporan berhasil dihapus</string>
    <string name="Gagalmengupdatestatus">Gagal mengupdate status</string>
    <string name="Gagalmenghapuslaporan">Gagal menghapus laporan</string>
    <string name="tambahCabang">Tambah Cabang</string>
    <string name="text_namalengkap">Nama Lengkap</string>
    <string name="etcard_alamat">Alamat</string>
    <string name="delete_branch_title">Delete Branch Title</string>
    <string name="confirm_delete_branch_message">Confirm Delete Branch Message</string>
    <string name="data_load_failed">Data Load Failed</string>
    <string name="delete">Delete</string>
    <string name="branch_deleted_success">Branch Deleted Success</string>
    <string name="branch_delete_failed">Branch Delete Failed</string>
    <string name="cancel">Cancel</string>
    <string name="validasi_nama_cabang">validasi_nama_cabang</string>
    <string name="validasi_alamat_cabang">validasi_alamat_cabang</string>
    <string name="validasi_nohp_cabang">validasi_nohp_cabang</string>
    <string name="tambah_cabang_sukses">tambah_cabang_sukses</string>
    <string name="tambah_cabang_gagal">tambah_cabang_gagal</string>
    <string name="SelamatDatang">Selamat Datang</string>
    <string name="Silakanloginuntukmelanjutkan">Silahkan login untuk melanjutkan</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Belummempunyaiakun">Belum punya akun?</string>
    <string name="Daftardisini">Daftar disini</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="laporan">Laporan</string>
    <string name="Registerberhasil">Register berhasil</string>
    <string name="LoginBerhasil">Login Berhasil</string>
    <string name="Passwordsalah">Password salah</string>
    <string name="Datapenggunatidakvalid">Data pengguna tidak valid</string>
    <string name="Nomorbelumterdaftar">Nomor belum terdaftar</string>
    <string name="RegisterUsername">Nama</string>
    <string name="Username">Nama</string>
    <string name="Register">Register</string>
    <string name="Sudahmempunyaiakun">Sudah mempunyai akun</string>
    <string name="Logindisini">Login disini</string>
    <string name="Greeting1">Siap melayani pelanggan dengan setulus hati</string>
    <string name="greeting">Berikan pelayanan yang maksimal !</string>
    <string name="HalloEga">Hallo Ega</string>
    <string name="Pelanggan">Pelanggan</string>
    <string name="layanan">Layanan</string>
    <string name="tambahan">Tambahan</string>
    <string name="Printer">Printer</string>
</resources>