<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context="RegisterActivity"
    android:padding="24dp">

    <!-- Container Box -->
    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="8dp"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/laundry"
            android:contentDescription="Logo"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <!-- Judul -->
        <TextView
            android:id="@+id/textWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SelamatDatang"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#1E293B"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="4dp" />

        <!-- Subjudul -->
        <TextView
            android:id="@+id/textInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Silakanloginuntukmelanjutkan"
            android:textSize="14sp"
            android:textColor="#64748B"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp" />

        <EditText
            android:id="@+id/RegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/Username"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"/>

        <!-- Input No HP -->
        <EditText
            android:id="@+id/RegisterPhone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/etcard_nohp"
            android:inputType="phone"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp">

            <!-- Input Password -->
            <EditText
                android:id="@+id/RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="48dp" />

            <!-- Tombol Toggle Password -->
            <ImageView
                android:id="@+id/ivTogglePassword"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:contentDescription="Toggle Password Visibility"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="4dp"/>
        </RelativeLayout>

        <!-- Tombol Login -->
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/Register"
            android:backgroundTint="#10C185"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp">

            <!-- TextView Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sudahmempunyaiakun"
                android:textSize="14sp"
                android:layout_marginBottom="4dp"/>

            <!-- TextView Nilai -->
            <TextView
                android:id="@+id/tvlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Logindisini"
                android:textSize="14sp"
                android:textColor="#2196F3"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>